# UltimaScraperCollection

./: .gitignore  pyproject.toml  test.py
ultima_scraper_collection/: __init__.py  config.py  progress_events.py
ultima_scraper_collection/helpers/: main_helper.py
ultima_scraper_collection/managers/: aio_pika_wrapper.py  content_manager.py  download_manager.py  filesystem_manager.py  legacy_code.py  option_manager.py  resource_manager.py  server_manager.py
ultima_scraper_collection/managers/database_manager/: database_manager.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/: sqlite_database.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/databases/user_data/migration/: alembic.ini
ultima_scraper_collection/managers/database_manager/connections/sqlite/databases/user_data/migration/alembic/: env.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/databases/user_data/migration/alembic/versions/: 0d4d92c0498e_content.py  1454e4d1c6b8_content.py  d2f2002f3c36_content.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/legacy_databases/messages/migration/: messages.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/legacy_databases/messages/migration/alembic/: env.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/legacy_databases/posts/migration/: posts.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/legacy_databases/posts/migration/alembic/: env.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/legacy_databases/stories/migration/: stories.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/legacy_databases/stories/migration/alembic/: env.py
ultima_scraper_collection/managers/database_manager/connections/sqlite/models/: api_model.py  media_model.py  user_database.py
ultima_scraper_collection/managers/datascraper_manager/: datascraper_manager.py
ultima_scraper_collection/managers/datascraper_manager/datascrapers/: fansly.py  onlyfans.py
ultima_scraper_collection/managers/metadata_manager/: metadata_manager.py
ultima_scraper_collection/managers/ultima_queue/: __init__.py  deduplicate files.py  ultima_queue.py
ultima_scraper_collection/modules/: module_streamliner.py
ultima_scraper_collection/projects/: project_manager.py  ultima_archive.py
