[tool.poetry]
name = "ultima-scraper-collection"
version = "1.1.2"
description = ""
authors = [
    "DIGITALCRIMINALS <89371864+digitalcriminals@users.noreply.github.com>",
]
packages = [{include = "ultima_scraper_collection"}]
include = ["ultima_scraper_collection/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

sqlalchemy = "^2.0.1"
psycopg2 = "^2.9.5"
alembic = "^1.9.2"
tqdm = "^4.65.0"
ultima-scraper-api = "^1.1.1"
ultima-scraper-renamer = "^1.1.0"
ffmpeg-python = "^0.2.0"
[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.2"
black = {version = "^23.3.0", allow-prereleases = true}

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
