[tool.poetry]
name = "ultima-scraper-collection"
version = "2.3.25"
description = ""
authors = ["UltimaHoarder <1285176+UltimaHoarder@users.noreply.github.com>"]
packages = [{ include = "ultima_scraper_collection" }]
include = ["ultima_scraper_collection/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
sqlalchemy = "^2.0.1"
psycopg2 = "^2.9.5"
alembic = "^1.9.2"
ffmpeg-python = "^0.2.0"
pydantic = "^2.0"
netifaces = "^0.11.0"
sshtunnel = "^0.4.0"
inflection = "^0.5.1"
alive-progress = "^3.1.5"
aio-pika = "^9.4.1"
ujson = "^5.10.0"

ultima-scraper-api = "^2.0"
ultima-scraper-renamer = "^1.0"
ultima-scraper-db = "^0.4"
ultima-scraper-detector = "^0.1"
appdirs = "^1.4.4"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.2"
black = { version = "^23.3.0", allow-prereleases = true }

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
